# services/api/docs/swagger.yaml
@@ -96,6 +96,16 @@ definitions:
     - name
     - slug
     type: object
+  github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto.HealthCheckResponse:
+    properties:
+      details:
+        additionalProperties:
+          type: string
+        type: object
+      status:
+        example: up
+        type: string
+    type: object
   github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto.InviteMemberRequest:
     properties:
       role:
@@ -306,6 +316,12 @@ definitions:
         items:
           $ref: '#/definitions/github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto.TenantResponse'
         type: array
+      meta: {}
+    type: object
+  ? github_com_TruongHoang2004_Hexta_services_api_internal_present_http_response.Response-github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto_HealthCheckResponse
+  : properties:
+      data:
+        $ref: '#/definitions/github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto.HealthCheckResponse'
       meta: {}
     type: object
   ? github_com_TruongHoang2004_Hexta_services_api_internal_present_http_response.Response-github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto_OrderListResponse
@@ -788,9 +804,11 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/github_com_TruongHoang2004_Hexta_services_api_internal_present_http_response.Response-github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto_HealthCheckResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/github_com_TruongHoang2004_Hexta_services_api_internal_present_http_response.Response-github_com_TruongHoang2004_Hexta_services_api_internal_present_http_dto_HealthCheckResponse'
       summary: Health Check
       tags:
       - System
