# services/api/internal/present/http/dto/health_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+// HealthCheckResponse represents the health check status and component details.
+type HealthCheckResponse struct {
+	Status  string            `json:"status" example:"up"`
+	Details map[string]string `json:"details"`
+}
